# autodemo

./: README.md  autodemo.slurm  demoProcess.py  irl_majorana.py  pfsmCollector.py  requirements.txt
automode/architecture/: __init__.py  abstract_architecture.py  finite_state_machine.py
automode/modules/: __init__.py  abstract_modules.py  chocolate.py
irace/aac_19_1/: aac_19_1.json  muHistory
irace/aac_19_1/grammars/: depend-config-fsm.txt  grammar-bt.txt
irace/aac_19_1/mission-folder/: aac.argos  fsm.txt  irl.txt
irace/aac_19_1/results-folder/: argos.sh  irace.Rdata  pos.mu
irace/aac_19_1/scenarios/: scenario100k.txt  scenario12_5k.txt  scenario20k.txt  scenario25k.txt  scenario5k.txt
irace/example/: fsm_collector.R  parallel-irace-mpi  target-runner  target-runner-old
irace/example/grammars/: grammar-fsm.txt
irace/example/scenarios/: scenario10k.txt  scenario50k.txt  scenario6_25k.txt
local_code/: JsonCollector.py  runAutodemo.py
local_code/argosFiles/: aac.argos  cfa.argos  homing.argos
local_code/argosResults/: aac.argos  cfa.argos  homing.argos  pos.mu  prueba_argos.py  score.txt
orchestra/: CMakeLists.txt  Foraging.cpp  Foraging.h  Template.cpp  Template.h
